@@ -210,6 +210,8 @@ for (;;)
     s/^\s+//;  # Remove leading space
 
     last if ($_ eq "");
+    next if $_ =~ /^\\=(?:\s|$)/;   # Comment line
+ 
     $x = eval "\"$_\"";   # To get escapes processed
 
     # Empty array for holding results, ensure $REGERROR and $REGMARK are
